# spellmatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg
.github/workflows/: docs.yml  test_and_deploy.yml
data/: README.md  figures.ipynb  validation.ipynb  verification.ipynb
data/benchmarks/: README.md  collect_batches.ipynb  collect_batches.py  collect_benchmark_results.ipynb  collect_benchmark_results.py  simutome_parameters.ipynb
data/datasets/: README.md
data/figures/: README.md  figures.ipynb
data/jackson_fischer_2020/: .gitignore  assignment_analysis.ipynb  benchmark.ipynb  benchmark_template.ipynb  dataset.ipynb  psa_benchmark.ipynb  spellmatch_benchmark.ipynb  spellmatch_benchmark.py  spellmatch_psa.ipynb  spellmatch_psa_adjacency.ipynb  spellmatch_psa_adjacency.py  spellmatch_psa_weighting.ipynb  spellmatch_psa_weighting.py
data/kuett_catena_2022/: .gitignore  dataset.ipynb  parameters.ipynb  run_spellmatch.sh  sectioning.ipynb  spellmatch.sh
data/kuett_catena_2022_test/: .gitignore  dataset.ipynb
docs/: index.md  installation.md  license.md
docs/algorithms/: graph_matching.md  index.md  points_matching.md
docs/benchmark/: index.md
docs/reference/: index.md
docs/usage/: assignment.md  cell_assignment.md  image_registration.md  index.md  mask_alignment.md  matching.md  (+2 more)
latest/: 404.html  index.html  sitemap.xml
notebooks/: .gitignore  benchmark_template.ipynb  figures.ipynb  simutome_parameters.ipynb  spellmatch_benchmark.ipynb  spellmatch_benchmark.py  spellmatch_psa_adjacency.ipynb  spellmatch_psa_adjacency.py  spellmatch_psa_weighting.ipynb  spellmatch_psa_weighting.py
spellmatch/: __init__.py  __main__.py  _spellmatch.py  assignment.py  hookspecs.py  io.py  plugins.py  qt.py  utils.py
tests/: test_dummy.py
v0.1.0/: index.html
(+178 files in other folders)
