[metadata]
name = spellmatch
url = https://github.com/BodenmillerGroup/spellmatch
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
description = Spatial cell-cell matching
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown

[options]
zip_safe = False
install_requires =
    click
    numpy
    pandas
python_requires = >=3.9
include_package_data = True
packages = find:

[options.entry_points]
console_scripts = 
    spellmatch = spellmatch.__main__:cli

[flake8]
max-line-length = 88
extend-ignore = E203
