[metadata]
name = spellmatch
url = https://github.com/BodenmillerGroup/spellmatch
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.9
license = MIT
description = Spatial cell-cell matching
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown

[options]
zip_safe = False
install_requires =
    click
    click-log
    napari[all]>=0.4.15
    numpy
    opencv-python-headless
    pandas
    probreg
    pydantic
    pyqtgraph
    PyYaml
    qtpy
    scikit-image>=0.19.0
    scikit-learn
    scipy>=1.8.0
    shapely
    SimpleITK
    tifffile
    xarray
python_requires = >=3.9,<3.10
include_package_data = True
packages = find:

[options.entry_points]
console_scripts = 
    spellmatch = spellmatch.__main__:cli

[options.extras_require]
cuda = 
    cupy
nonfree =
    opencv-contrib-python-headless

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
